# server/src/main/kotlin/com/blueoauld/server/domain/ad/dto/request/AdRewardCallbackRequest.kt
@@ -1,0 +1,9 @@
+package com.blueoauld.server.domain.ad.dto.request
+
+data class AdRewardCallbackRequest(
+
+    val userId: Long,
+    val transactionId: String,
+    val keyId: String,
+    val signature: String,
+)
